# rental_managment

./: README.md
backend/: pyproject.toml
backend/bike_rental/: db.sqlite3
backend/bike_rental/bike_rental/: settings.py  urls.py
backend/bike_rental/rentals/: admin.py  models.py  serializers.py  urls.py  views.py
backend/bike_rental/rentals/migrations/: 0001_initial.py
